--- a/glib2/repos/gnome-i686/PKGBUILD
+++ b/glib2/repos/gnome-i686/PKGBUILD
@@ -10,7 +10,7 @@ arch=(i686 x86_64)
 license=('LGPL')
 depends=('pcre>=7.7')
 makedepends=('pkgconfig')
-options=('!libtool')
+options=('!libtool' '!docs')
 source=(http://ftp.gnome.org/pub/GNOME/sources/glib/2.17/glib-${pkgver}.tar.bz2
 	glib2.sh
 	glib2.csh)
