--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -1,17 +1,17 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=atk
-pkgver=1.22.0
+pkgver=1.23.5
 pkgrel=1
 pkgdesc="A library providing a set of interfaces for accessibility"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('glib2>=2.16.0')
+depends=('glib2>=2.17.7')
 makedepends=('pkgconfig')
-options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.22/${pkgname}-${pkgver}.tar.bz2)
+options=('!libtool' '!docs')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.23/${pkgname}-${pkgver}.tar.bz2)
 url='http://www.gtk.org/'
-md5sums=('06a2b39a22d5ca35c47435da6b9643ac')
+md5sums=('0b7d2800deb08b82c12f535b7d4199fd')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
