--- a/libbonobo/repos/gnome-i686/PKGBUILD
+++ b/libbonobo/repos/gnome-i686/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libbonobo
-pkgver=2.22.0
+pkgver=2.23.1
 pkgrel=1
 pkgdesc="A set of language and system independant CORBA interfaces for creating reusable components"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('orbit2>=2.14.12' 'libxml2>=2.6.30')
+depends=('orbit2>=2.14.14' 'libxml2>=2.6.32' 'dbus-glib>=0.76')
 makedepends=('perlxml' 'pkgconfig' 'flex')
 options=('!libtool')
 backup=('etc/bonobo-activation/bonobo-activation-config.xml')
 replaces=('bonobo-activation')
 url="http://www.gnome.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/libbonobo/2.22/libbonobo-${pkgver}.tar.bz2
+source=(http://ftp.gnome.org/pub/gnome/sources/libbonobo/2.23/libbonobo-${pkgver}.tar.bz2
 	bonobo-activation-config.xml)
 install=libbonobo.install
-md5sums=('998a576ad26784ac87eab99e96013527'
+md5sums=('9031ec557888d63bac1cc206177c877f'
          '6392efaca30a26f826eafc4b8ccbc01f')
 
 build() {
