--- a/at-spi/repos/gnome-i686/PKGBUILD
+++ b/at-spi/repos/gnome-i686/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Jan de Groot <jan@archlinux.org>
 
 pkgname=at-spi
-pkgver=1.22.1
+pkgver=1.23.6
 pkgrel=1
 pkgdesc="Assistive Technology Service Provider Interface"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libbonobo>=2.22.0' 'libxevie' 'libxtst' 'libsm' 'gtk2>=2.12.9')
-makedepends=('perlxml' 'pkgconfig' 'gail>=1.22.1' 'python>=2.5')
+depends=('libbonobo>=2.23.1' 'libxevie' 'libxtst' 'gtk2>=2.13.7')
+makedepends=('perlxml' 'pkgconfig' 'python>=2.5')
 options=('!libtool')
 url="http://www.gnome.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('2ee1b35ef25e753e6bac840a418608f5')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('0a53d08b26a8e52ddcdfea8243564ba5')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
