--- a/gnome-vfs/repos/gnome-i686/PKGBUILD
+++ b/gnome-vfs/repos/gnome-i686/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-vfs
-pkgver=2.22.0
-pkgrel=4
+pkgver=2.23.0
+pkgrel=1
 pkgdesc="The GNOME Virtual File System"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('fam' 'gconf>=2.22.0' 'hal>=0.5.10' 'bzip2' 'avahi>=0.6.23' 'smbclient>=3.0.30' 'gnome-mime-data>=2.18.0-2' 'heimdal>=1.2' 'gnutls>=2.4.1')
+depends=('fam' 'gconf>=2.23.2' 'hal>=0.5.11' 'bzip2' 'avahi>=0.6.23' 'smbclient>=3.0.31' 'gnome-mime-data>=2.18.0-2' 'heimdal>=1.2' 'gnutls>=2.4.1')
 makedepends=('perlxml' 'pkgconfig')
 options=('!libtool' '!emptydirs')
 conflicts=(gnome-vfs-samba)
@@ -15,18 +15,14 @@ provides=(gnome-vfs-samba)
 replaces=(gnome-vfs-samba gnome-vfs-extras)
 url="http://www.gnome.org"
 install=gnome-vfs.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/gnome-vfs-${pkgver}.tar.bz2
-	hal-show-volume-names.patch
-	http-neon-method-youtube.patch)
-md5sums=('369105fd82cb99e69e63acab8f3b89b7' '109d07aa1dc8cb6523c47c4984047dce'\
-         'a980d7abfbf483b25e2a93bfb868b758')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/gnome-vfs-${pkgver}.tar.bz2
+	hal-show-volume-names.patch)
+md5sums=('c1650c4432d2af7c0c05e2b75c4c19d0' '109d07aa1dc8cb6523c47c4984047dce')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   #Archlinux patch (b.g.o #321498)
   patch -Np1 -i ${startdir}/src/hal-show-volume-names.patch || return 1
-
-  patch -Np1 -i ${startdir}/src/http-neon-method-youtube.patch || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc \
         --localstatedir=/var --disable-static \
