--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,27 +4,27 @@
 # Maintainer: Douglas Soares de Andrade <douglas@archlinux.org>
 
 pkgname=libpng
-pkgver=1.2.29
-pkgrel=2
+pkgver=1.2.31
+pkgrel=1
 pkgdesc="A collection of routines used to create PNG format graphics files"
 arch=('i686' 'x86_64')
 url="http://www.libpng.org/pub/png/libpng.html"
 license=('custom')
 depends=('zlib')
+options=('!libtool')
 source=(http://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2
         # http://littlesvr.ca/apng/diff/${pkgname}-${pkgver}-apng.patch
 	    ${pkgname}-${pkgver}-apng.patch )
 options=('!libtool')
-replaces=('libpng=1.2.30')
 
-md5sums=('f588cb4ee39e3a333604096f937ea157'
-         '8aa74a2912d68d0f9351f3bd137ab05d')
+md5sums=('78d2f8c4e0d64f8948819563587302d3'
+         'fab42a4ad4de6fcb87dcca6a7a19aefb')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
 
   # Add animated PNG (apng) support
-  patch -Np1 -i $startdir/src/${pkgname}-${pkgver}-apng.patch || return 1
+  patch -Np0 -i $startdir/src/${pkgname}-${pkgver}-apng.patch || return 1
 
   libtoolize --force --copy || return 1
   aclocal || return 1
@@ -40,7 +40,4 @@ build() {
   install -m755 png2pnm pnm2png ${startdir}/pkg/usr/bin/
   install -m755 -d ${startdir}/pkg/usr/share/licenses/${pkgname}
   install -m644 ../../LICENSE ${startdir}/pkg/usr/share/licenses/${pkgname}/ || return 1
-
-  # Removing unneeded symlink
-  rm ${startdir}/pkg/usr/lib/libpng.la
 }
