--- a/evolution/repos/gnome-i686/PKGBUILD
+++ b/evolution/repos/gnome-i686/PKGBUILD
@@ -2,25 +2,25 @@
 # Maintainer: dale <dale@archlinux.org>
 
 pkgname=evolution
-pkgver=2.22.3.1
-pkgrel=2
+pkgver=2.23.90
+pkgrel=1
 pkgdesc="Integrated Workgroup and Personal Information Management for Gnome"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libnetworkmanager>=0.6.6' 'libnotify>=0.4.4' 'gtkhtml>=3.18.3' 'evolution-data-server>=2.22.3' 'gnome-pilot>=2.0.16')
+depends=('libnetworkmanager>=0.6.6' 'libnotify>=0.4.4' 'gtkhtml>=3.23.90' 'evolution-data-server>=2.23.90.1' 'gnome-pilot>=2.0.16')
 makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2' 'gstreamer0.10>=0.10.20' 'intltool')
 options=('!libtool' '!emptydirs')
 install=evolution.install
 url=(http://www.gnome.org/projects/evolution/)
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('5be2cb0584344cfe7bb4944c2fe468be')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('822234b835811a8abdacb1f865a5cb55')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
 
   ./configure --prefix=/usr --sysconfdir=/etc \
         --localstatedir=/var \
-	--libexecdir=/usr/lib/evolution \
+	--libexecdir=/usr/lib \
   	--disable-scrollkeeper \
 	--enable-nss=yes \
 	--with-openldap=yes \
