--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -1,19 +1,19 @@
 # $Id$
 # Maintainer: Jan de Groot  <jgc@archlinux.org>
 pkgname=libgweather
-pkgver=2.22.3
+pkgver=2.23.6
 pkgrel=1
 pkgdesc="Provides access to weather information from the net"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('gnome-vfs>=2.22.0')
+depends=('gconf>=2.23.2' 'libsoup>=2.23.6')
 makedepends=('pkgconfig' 'perlxml')
 options=('!libtool' '!emptydirs')
 conflicts=('gnome-applets<2.22.0')
 url="http://www.gnome.org/"
 install=libgweather.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('151e03d925579241decc92afa4d07182')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('3e6a079f0402025495ea7b3a39c3fad4')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
