--- a/libgtop/repos/gnome-i686/PKGBUILD
+++ b/libgtop/repos/gnome-i686/PKGBUILD
@@ -2,16 +2,17 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libgtop
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="A library that read information about processes and the running system"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('glib2>=2.16.4' 'libxau')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
+depends=('glib2>=2.17.7' 'libxau')
+install=libgtop.install
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
 options=('!libtool')
 url="http://www.gnome.org/"
-md5sums=('57764ad246ceb959f601505aa2364f1f')
+md5sums=('2796d6461fd4501387ac1609d0b08575')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -21,4 +22,7 @@ build() {
 	      --with-linux-table || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
+
+  rm -f ${pkgdir}/usr/share/info/dir
+  gzip -9nf ${pkgdir}/usr/share/info/*
 }
