bug-buddy 2.23.90 - GNOME 2.23.90
git-svn-id: file:///srv/repos/svn-packages/svn@10112 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/bug-buddy/repos/gnome-i686/PKGBUILD
+++ b/bug-buddy/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=bug-buddy
-pkgver=2.22.0
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="A bug reporting tool for GNOME"
 arch=(i686 x86_64)
 install=bug-buddy.install
-depends=('gnome-menus>=2.22.0' 'gnome-desktop>=2.22.0' 'evolution-data-server>=2.22.0' 'libgtop>=2.22.0' 'libelf')
+depends=('gnome-menus>=2.23.6' 'libgnomeui>=2.23.90' 'evolution-data-server>=2.23.90.1' 'libgtop>=2.23.90' 'libelf')
 makedepends=('perlxml' 'pkgconfig')
 groups=('gnome-extra')
 license=(GPL)
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('092e1f91d0be4ca133cd0650622a6b06')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('93f81f9549471e07531b7d38fdc61439')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
