--- a/cheese/repos/gnome-i686/PKGBUILD
+++ b/cheese/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=cheese
-pkgver=2.22.3
-pkgrel=2
+pkgver=2.23.90
+pkgrel=1
 pkgdesc="Cheese uses your webcam to take photos and videos, applies fancy special effects and lets you share the fun with others"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgnomeui>=2.22.1' 'gstreamer0.10-base-plugins>=0.10.20' 'evolution-data-server>=2.22.3' 'librsvg>=2.22.2' 'libxxf86vm')
+depends=('libgnomeui>=2.23.90' 'gstreamer0.10-base-plugins>=0.10.20' 'evolution-data-server>=2.23.90.1' 'librsvg>=2.22.2')
 makedepends=('perlxml' 'gnome-doc-utils>=0.12.2')
 groups=('gnome-extra')
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org/projects/cheese/"
 install=cheese.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('21c23e289b1c8a1ae014704d615a9540')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('400cf7e2456a0c1a0764fdb4b27e8f13')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
