--- a/dasher/repos/gnome-i686/PKGBUILD
+++ b/dasher/repos/gnome-i686/PKGBUILD
@@ -2,25 +2,22 @@
 # Maintainer: damir <damir@archlinux.org>
 
 pkgname=dasher
-pkgver=4.7.3
+pkgver=4.9.0
 pkgrel=1
 pkgdesc="Information-efficient text-entry interface, driven by natural continuous pointing gestures"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('at-spi>=1.22.1' 'libgnomeui>=2.22.1' 'gnome-speech>=0.4.20')
+depends=('at-spi>=1.23.6' 'libgnomeui>=2.23.90' 'gnome-speech>=0.4.21')
 makedepends=('pkgconfig' 'intltool' 'gnome-doc-utils>=0.12.2')
 url="http://www.gnome.org"
 groups=('gnome-extra')
 options=(!emptydirs)
 install=dasher.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2
-	gcc-4.3.patch)
-md5sums=('f97dfd3c54f6d6c5f2873d4f82cb33c4'
-         '2ef2dc940df24ca9796bbb628967ea56')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('f6f024878f258a9506e62cf717446437')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np0 -i ${srcdir}/gcc-4.3.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var \
 	      --disable-scrollkeeper --enable-speech || return 1
