--- a/nautilus-cd-burner/repos/gnome-i686/PKGBUILD
+++ b/nautilus-cd-burner/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=nautilus-cd-burner
-pkgver=2.22.1
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="Adds cd burner functionality to nautilus"
 arch=(i686 x86_64)
-depends=('cdrkit' 'dvd+rw-tools' 'gnome-mount>=0.8' 'desktop-file-utils' 'libgnomeui>=2.22.1')
-makedepends=('perlxml' 'pkgconfig' 'nautilus>=2.22.2')
+depends=('cdrkit' 'dvd+rw-tools' 'gnome-mount>=0.8' 'desktop-file-utils' 'libgnomeui>=2.23.90')
+makedepends=('perlxml' 'pkgconfig' 'nautilus>=2.23.90')
 options=('!libtool' '!emptydirs')
 license=('GPL')
+url=http://www.gnome.org/
 install=nautilus-cd-burner.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/nautilus-cd-burner/2.22/${pkgname}-${pkgver}.tar.bz2)
+source=(http://ftp.gnome.org/pub/GNOME/sources/nautilus-cd-burner/2.23/${pkgname}-${pkgver}.tar.bz2)
 groups=('gnome-extra')
-md5sums=('6bf96cb55a11813a26118eabafa69143')
+md5sums=('ff0a2479a1dbbc270c007ca2e268da67')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
