--- a/deskbar-applet/repos/gnome-i686/PKGBUILD
+++ b/deskbar-applet/repos/gnome-i686/PKGBUILD
@@ -2,22 +2,22 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=deskbar-applet
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="An all-in-one search bar for the GNOME panel"
 arch=(i686 x86_64)
 url="http://raphael.slinckx.net/deskbar/"
 license=('GPL')
-depends=('gnome-desktop>=2.22.3' 'gnome-python-desktop>=2.22.0' 'gnome-panel>=2.22.2' 'libbonoboui>=2.22.0' 'dbus-python>=0.82.4')
-makedepends=('evolution-data-server>=2.22.3' 'gettext' 'perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
+depends=('gnome-desktop>=2.23.90' 'gnome-python-desktop>=2.23.0' 'gnome-panel>=2.23.90' 'libbonoboui>=2.23.5' 'dbus-python>=0.83.0')
+makedepends=('evolution-data-server>=2.23.90.1' 'gettext' 'perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
 options=('!libtool' '!emptydirs')
 install="deskbar-applet.install"
-source=(http://ftp.gnome.org/pub/GNOME/sources/deskbar-applet/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('cbea61704827d84363c3b5b0cb18b2fd')
+source=(http://ftp.gnome.org/pub/GNOME/sources/deskbar-applet/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e074a5b667ca2082e34674d94f894588')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc \
+  LD_PRELOAD="" ./configure --prefix=/usr --sysconfdir=/etc \
     --localstatedir=/var \
     --disable-scrollkeeper \
     --enable-beagle \
