--- a/gnome-control-center/repos/gnome-i686/PKGBUILD
+++ b/gnome-control-center/repos/gnome-i686/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-control-center
-pkgver=2.22.2.1
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="The Control Center for GNOME"
 arch=(i686 x86_64)
-depends=('libgnomekbd>=2.22.0' 'metacity>=2.22.0' 'nautilus>=2.22.3' 'gstreamer0.10-base>=0.10.19' 'libxss' 'gnome-panel>=2.22.2' 'desktop-file-utils' 'gnome-settings-daemon>=2.22.2.1')
+depends=('metacity>=2.23.144' 'eel>=2.23.90' 'gstreamer0.10-base>=0.10.20' 'libxss' 'gnome-panel>=2.23.90' 'desktop-file-utils' 'gnome-settings-daemon>=2.23.90')
 makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig')
 url="http://www.gnome.org"
 groups=('gnome')
@@ -17,13 +17,10 @@ install=gnome-control-center.install
 license=('GPL')
 options=('!libtool' '!emptydirs')
 source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('f708092437fff488656c01665cbe6ae9')
+md5sums=('831ddcaad205dc84323275480c7cb89c')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  # Don't generate files which are generated in postinstall
-  sed -i -e '/update-desktop-database/d' vfs-methods/*/Makefile.* || return 1
-
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static \
 	      --enable-gstreamer=0.10 --enable-aboutme \
