--- a/gnome-applets/repos/gnome-i686/PKGBUILD
+++ b/gnome-applets/repos/gnome-i686/PKGBUILD
@@ -2,24 +2,22 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-applets
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="GNOME Applets"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('gstreamer0.10-base-plugins' 'gnome-panel>=2.22.2' 'libgtop>=2.22.3' 'gucharmap>=2.22.3' 'libnotify>=0.4.4' 'cpufrequtils' 'libgnomekbd>=2.22.0')
-makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig' 'gnome-settings-daemon>=2.22.2.1')
+depends=('gstreamer0.10-base-plugins' 'gnome-panel>=2.23.90' 'libgtop>=2.23.90' 'gucharmap>=2.23.6' 'libnotify>=0.4.4' 'cpufrequtils' 'libgnomekbd>=2.23.2')
+makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig' 'gnome-settings-daemon>=2.23.90')
 options=(!emptydirs)
 url="http://www.gnome.org"
 groups=(gnome)
 install=gnome-applets.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2
-	gnome-applets-2.21.1-mixer-sync.patch)
-md5sums=('9e64d2827b0e8d2a03ebffb2c3499566' 'a0db1d8136099199f4fe520cf5b6045c')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('c82156f5fd740c5d8601e04eca2ec388')
 	
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np1 -i ${startdir}/src/gnome-applets-2.21.1-mixer-sync.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gnome-applets \
               --localstatedir=/var --disable-static \
