--- a/gnome-screensaver/trunk/PKGBUILD
+++ b/gnome-screensaver/trunk/PKGBUILD
@@ -2,30 +2,26 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-screensaver
-pkgver=2.22.2
+pkgver=2.23.3
 pkgrel=1
 pkgdesc="Screensaver designed to integrate well with the GNOME desktop."
 arch=(i686 x86_64)
 license=('GPL')
 url="http://live.gnome.org/GnomeScreensaver"
 backup=(etc/pam.d/gnome-screensaver)
-depends=('gnome-menus>=2.22.1' 'libxxf86misc' 'libgnomekbd>=2.22.0' 'libxss'
-	 'libgl' 'libnotify')
+depends=('gnome-menus>=2.23.6' 'libxxf86misc' 'libgnomekbd>=2.23.2' 'libxss' 'libgl' 'libnotify' 'gnome-desktop>=2.23.90')
 makedepends=('pkgconfig' 'gettext' 'perlxml' 'mesa' 'xscreensaver')
 groups=('gnome')
 options=(!emptydirs)
 install=gnome-screensaver.install
-source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2
-	gs-fade.patch
+source=(http://ftp.gnome.org/pub/GNOME/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2
         archify-pam.patch)
-md5sums=('496a2e0cba5c27db57a72ecf2e17f789'
-	 '7c4382ea1f41aed9066c3e68dc115186'
+md5sums=('c66d729a9b3317edcd58c567a18c2ffa'
 	 '18c417676f6e8ef16ca2a10be74578a5')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   patch -Np0 -i ${startdir}/src/archify-pam.patch || return 1
-  patch -Np0 -i ${startdir}/src/gs-fade.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gnome-screensaver \
               --localstatedir=/var --with-gdm-config=/usr/share/gdm/defaults.conf \
