--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gtk-engines
-pkgver=2.14.3
+pkgver=2.15.3
 pkgrel=1
 pkgdesc="Theme engines for GTK+ 2"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('gtk2>=2.12.9-2')
+depends=('gtk2>=2.13.7')
 makedepends=('pkgconfig' 'perlxml')
 options=('!libtool')
 url="http://live.gnome.org/GnomeArt"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.14/${pkgname}-${pkgver}.tar.bz2)
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.15/${pkgname}-${pkgver}.tar.bz2)
 conflicts=('lighthouse-gtk2' 'clearlooks-gtk2')
 replaces=('lighthouse-gtk2')
-md5sums=('be92ddda833defb7296a850331c03d05')
+md5sums=('3d5746d42c2cef7bef0650784f28dbb3')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
