--- a/gnome-sharp/repos/gnome-i686/PKGBUILD
+++ b/gnome-sharp/repos/gnome-i686/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: tobias <tobias@archlinux.org>
 
 pkgname=gnome-sharp
-pkgver=2.20.1
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="GNOME bindings for C#"
 arch=(i686 x86_64)
 license=(LGPL)
 url="http://gtk-sharp.sourceforge.net"
-depends=('gtk-sharp-2>=2.12.1' 'gnome-panel>=2.22.1.2-3' 'libgnomeprintui>=2.18.2')
+depends=('gtk-sharp-2>=2.12.1' 'libgnomeui>=2.23.90')
 makedepends=('pkgconfig' 'monodoc')
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/gnome-sharp/2.20/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a7fccb122b15e0a6682306e98fd79e1d')
+source=(http://ftp.gnome.org/pub/gnome/sources/gnome-sharp/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('4c0cd039c61992a0822ebb23e4399fb6')
 
 build() {
  # get rid of that .wapi errors; thanks to brice
