--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,18 @@
 # Maintainer: tobias <tobias@archlinux.org>
 
 pkgname=gtk-sharp-2
-pkgver=2.12.1
+pkgver=2.12.2
 pkgrel=1
 pkgdesc="gtk2 bindings for C#"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://gtk-sharp.sourceforge.net"
-depends=('mono>=1.9' 'libglade>=2.6.2' 'gtk2>=2.12.9-2')
+depends=('mono>=1.9' 'libglade>=2.6.2' 'gtk2>=2.13.7')
 makedepends=('pkgconfig' 'monodoc')
 conflicts=('gtk#')
 options=('!libtool' '!makeflags')
 source=(http://ftp.gnome.org/pub/GNOME/sources/gtk-sharp/2.12/gtk-sharp-${pkgver}.tar.bz2)
-md5sums=('b769fabc114fa9201c4e085ae36a8540')
+md5sums=('a0ab73f69cdd374816aac14e55e7d351')
 
 build() {
  # get rid of that .wapi errors; thanks to brice
