--- a/gnome-desktop-sharp/repos/gnome-i686/PKGBUILD
+++ b/gnome-desktop-sharp/repos/gnome-i686/PKGBUILD
@@ -2,18 +2,17 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-desktop-sharp
-pkgver=2.20.1
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="GNOME desktop bindings for C#"
 arch=(i686 x86_64)
 license=(LGPL)
 url="http://gtk-sharp.sourceforge.net"
-depends=('gnome-sharp>=2.20.0' 'vte>=0.16.13' 'librsvg>=2.22.0' 
-	 'nautilus-cd-burner>=2.22.0' 'libwnck>=2.22.0' 'gtkhtml>=3.18.0')
-makedepends=('pkgconfig' 'monodoc')
+depends=('gnome-sharp>=2.23.90' 'vte>=0.17.2' 'librsvg>=2.22.2' 'gnome-panel>=2.23.90.1' 'libgnomeprintui>=2.18.2' 'nautilus-cd-burner>=2.23.90' 'libwnck>=2.23.6' 'gtkhtml>=3.23.90' 'gtksourceview2>=2.3.0')
+makedepends=('pkgconfig' 'monodoc' 'gtk-sharp-2>=2.12.2')
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.20/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('874cfcf8a6547476906b638355a0ed2f')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('d776d18f93d073677421b839fbaa2e2d')
 
 build() {
  # get rid of that .wapi errors; thanks to brice
