upgpkg: midori 0.0.20-1     version bump + midori.install added for icon theme and mime types
git-svn-id: file:///srv/repos/svn-packages/svn@10252 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/midori/trunk/PKGBUILD
+++ b/midori/trunk/PKGBUILD
@@ -4,21 +4,21 @@
 # Contributor: Johannes Krampf <wuischke.at.amule.dot.org>
 
 pkgname=midori
-pkgver=0.0.19
-pkgrel=3
+pkgver=0.0.20
+pkgrel=1
 pkgdesc="A lightweight web browser based on Gtk WebKit"
 arch=('i686' 'x86_64')
 url="http://www.twotoasts.de/index.php?/pages/midori_summary.html"
 license=('GPL')
-depends=('gtksourceview2' 'libwebkit')
+install=midori.install
+depends=('gtksourceview2' 'libwebkit' 'hicolor-icon-theme')
 optdepends=('gvfs: support for source viewing')
 makedepends=('pkgconfig' 'libxml2' 'intltool')
-source=(http://www.twotoasts.de/media/$pkgname/$pkgname-$pkgver.tar.bz2)
-md5sums=('9aad2b84d59aa2135733d5bae5194967')
+source=(http://goodies.xfce.org/releases/$pkgname/$pkgname-$pkgver.tar.bz2)
+md5sums=('d27799c093b13e124eb7c0f479ea26c0')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./autogen.sh
   ./configure --prefix=/usr
   make || return 1
   make DESTDIR=${pkgdir} install || return 1
