--- a/dovecot/trunk/PKGBUILD
+++ b/dovecot/trunk/PKGBUILD
@@ -6,21 +6,21 @@
 # Maintainer: Paul Mattal <paul@archlinux.org>
 
 pkgname=dovecot
-pkgver=1.0.15
-pkgrel=3
+pkgver=1.1.2
+pkgrel=1
 pkgdesc="An IMAP and POP3 server written with security primarily in mind"
 arch=('i686' 'x86_64')
 url="http://dovecot.org/"
 license=("LGPL")
-depends=('pam>=0.99.9.0' 'libmysqlclient>=5.0.45' 'postgresql-libs>=8.3.0' \
-	 'heimdal>=1.2')
+depends=('pam>=1.0.1-2' 'libmysqlclient>=5.0.60' 'postgresql-libs>=8.3.3' \
+	 'heimdal>=1.2' 'libcap' 'bzip2')
 makedepends=()
 provides=('imap-server' 'pop3-server')
 replaces=()
 options=('!libtool')
 install=$pkgname.install
-source=(http://dovecot.org/releases/1.0/$pkgname-$pkgver.tar.gz dovecot.sh)
-md5sums=('aa39c11c18df6b95b64d4f04d793d77a'
+source=(http://dovecot.org/releases/1.1/$pkgname-$pkgver.tar.gz dovecot.sh)
+md5sums=('fcebb6c099421049632b2f1f019f55cd'
          'd020d43eab4ded6fb379dadc570a9490')
 
 build() {
