upgpkg: nano 2.0.8-2     fix unwanted infodir
git-svn-id: file:///srv/repos/svn-packages/svn@10273 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nano/trunk/PKGBUILD
+++ b/nano/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Judd <judd@archlinux.org>
 pkgname=nano
 pkgver=2.0.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Pico editor clone with enhancements"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -12,6 +12,7 @@ depends=('glibc' 'ncurses')
 source=(http://www.nano-editor.org/dist/v2.0/nano-${pkgver}.tar.gz)
 backup=(etc/nanorc)
 md5sums=('fcb2a26285921458b6fe381c2802b1a8')
+options=('!docs')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
