--- a/pidgin/trunk/PKGBUILD
+++ b/pidgin/trunk/PKGBUILD
@@ -3,30 +3,25 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=pidgin
-pkgver=2.4.3
-pkgrel=2
+pkgver=2.5.0
+pkgrel=1
 pkgdesc="A GTK+-based messaging client"
 arch=(i686 x86_64)
 license=('GPL2')
 url="http://pidgin.im"
 depends=('startup-notification' 'gtkspell' 'libxss' 'gstreamer0.10'
          'dbus-glib>=0.73' 'ca-certificates' 'gnutls>=2.4.1')
-makedepends=('pkgconfig' 'tk' 'avahi' 'intltool')
+makedepends=('pkgconfig' 'tk' 'avahi' 'intltool' 'python')
 replaces=('gaim')
 conflicts=('gaim')
 provides=('gaim')
-options=(!libtool)
+options=('!libtool')
 install=pidgin.install
-source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2
-        certificate-location.patch)
-md5sums=('9e4a5f4ebda16a51fe91ec610286810a'
-         '773d1b944077d88a89bedc595d5f86b0')
+source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2)
+md5sums=('71df6633794de30e57827848cfb61996')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
-
-  # patch to use system SSL certs
-  patch -Np0 < $srcdir/certificate-location.patch
 
   # gconf won't die with the --disable-schemas-install option
   sed -i -e 's/gconftool-2/no/g' configure.ac || return 1
@@ -40,6 +35,7 @@ build() {
   automake --add-missing || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc \
+              --with-ssl-certificates=/etc/ssl/certs \
               --disable-perl --disable-cap \
               --disable-schemas-install \
               --enable-gtkspell --enable-gnutls=yes \
