upgpkg: openjdk6 1.2-4     fix broken jvm location to march /etc/profile.d/openjdk6.sh again
git-svn-id: file:///srv/repos/svn-packages/svn@10324 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openjdk6/trunk/PKGBUILD
+++ b/openjdk6/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=openjdk6
 pkgver=1.2
 _date=20080825
-pkgrel=3
+pkgrel=4
 pkgdesc='Free Java environment based on OpenJDK 6.0 with IcedTea6 replacing binary plugs.'
 url='http://icedtea.classpath.org'
 arch=('i686' 'x86_64')
@@ -51,7 +51,7 @@ build() {
     _arch=i586
   fi
   _javaver=1.6.0
-  _jvmdir=/usr/lib/java-${_javaver}-openjdk
+  _jvmdir=/usr/lib/jvm/java-${_javaver}-openjdk
 
   cd ${srcdir}/icedtea6
   ln -s ${srcdir}/openjdk-6-src-${_openjdk_version}-${_openjdk_date}.tar.gz .
@@ -75,6 +75,9 @@ build() {
     JCONF="--with-openjdk --with-openjdk-home=/opt/java"
   elif [ -x /usr/lib/jvm/java-1.5.0-gcj-1.5.0.0/bin/javac ]; then
     JCONF="--with-gcj-home=/usr/lib/jvm/java-1.5.0-gcj-1.5.0.0 --with-javac"
+  elif [ -x /usr/lib/java-${_javaver}-openjdk/bin/javac ]; then
+    JCONF="--with-openjdk --with-openjdk-home=/usr/lib/java-${_javaver}-openjdk" 
+    # ^ only fallback to build with broken 1.2-3, can be removed later
   else
     echo "No supported java installation found, install either openjdk6, jdk or java-gcj-compat"
     return 1
