use system redland
git-svn-id: file:///srv/repos/svn-packages/svn@10334 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/openoffice-base-devel/trunk/PKGBUILD
+++ b/openoffice-base-devel/trunk/PKGBUILD
@@ -149,6 +149,7 @@ build() {
 	--with-system-mozilla=libxul\
 	--with-system-neon\
 	--with-system-python\
+	--with-system-redland\
 	--with-system-sane-header\
 	--with-system-sndfile\
 	--with-system-stdlibs\
