--- a/kernel26/trunk/PKGBUILD
+++ b/kernel26/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Thomas Baechler <thomas@archlinux.org>
 pkgname=kernel26
 _basekernel=2.6.26
-pkgver=2.6.26.2
+pkgver=2.6.26.3
 pkgrel=1
 #_patchname="patch-${pkgver}-${pkgrel}-ARCH"
 _patchname="patch-${pkgver}-1-ARCH"
@@ -29,10 +29,10 @@ source=(ftp://ftp.kernel.org/pub/linux/kernel/v2.6/linux-$_basekernel.tar.bz2
         # standard config files for mkinitcpio ramdisk
         kernel26.preset)
 md5sums=('5169d01c405bc3f866c59338e217968c'
-         '436672584c4ada6e2751402558551c7e'
-         '91fc9a963c27225b9e6cc92c891bf680'
-         '4a6fbcd51f05ef7c1e8853b1ebf2085a'
-         '25584700a0a679542929c4bed31433b6')
+         '003e89dd71b32ae9b93cd1601da3b1b0'
+	 '4fd1071a8dc2ea993aed81d5920de18d'
+         'd5ad1f296356d159a2616a49d98b3434'
+	 '25584700a0a679542929c4bed31433b6')
 
 build() {
   KARCH=x86
@@ -116,6 +116,11 @@ build() {
   # http://bugs.archlinux.org/task/9912
   mkdir -p $startdir/pkg/usr/src/linux-${_kernver}/drivers/media/dvb/dvb-core
   cp drivers/media/dvb/dvb-core/*.h $startdir/pkg/usr/src/linux-${_kernver}/drivers/media/dvb/dvb-core/
+  # add dvb headers for external modules
+  # in reference to:
+  # http://bugs.archlinux.org/task/11194
+  mkdir -p $startdir/pkg/usr/src/linux-${_kernver}/include/config/dvb/
+  cp include/config/dvb/*.h $startdir/pkg/usr/src/linux-${_kernver}/include/config/dvb/
   # add xfs and shmem for aufs building
   mkdir -p $startdir/pkg/usr/src/linux-${_kernver}/fs/xfs
   mkdir -p $startdir/pkg/usr/src/linux-${_kernver}/mm
@@ -142,3 +147,4 @@ build() {
   # remove unneeded architectures
   rm -rf $startdir/pkg/usr/src/linux-${_kernver}/arch/{alpha,arm,arm26,avr32,blackfin,cris,frv,h8300,ia64,m32r,m68k,m68knommu,mips,parisc,powerpc,ppc,s390,sh,sh64,sparc,sparc64,um,v850,xtensa}
 }
+
