--- a/pacman/trunk/PKGBUILD
+++ b/pacman/trunk/PKGBUILD
@@ -3,23 +3,23 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=pacman
-pkgver=3.2.0
+pkgver=3.2.1
 pkgrel=1
 pkgdesc="A library-based package manager with dependency support"
 arch=('i686' 'x86_64')
 url="http://www.archlinux.org/pacman/"
 license=('GPL')
 groups=('base')
-depends=('gcc-libs' 'bash' 'libarchive>=2.5.5' 'libdownload>=1.3')
+depends=('bash' 'libarchive>=2.5.5' 'libdownload>=1.3')
 backup=(etc/pacman.conf etc/makepkg.conf etc/pacman.d/mirrorlist)
 install=pacman.install
 options=(!libtool)
 source=(ftp://ftp.archlinux.org/other/pacman/$pkgname-$pkgver.tar.gz
         pacman.conf
         mirrorlist)
-md5sums=('f56238a6ba29d2252bb0976f5420b88e'
-         'bf489fb0437ee27f6cf6dcd0fb55731f'
-         'ea21911b8d9e7e79e040daa337e08946')
+md5sums=('5b133613cebd74aa8c199de049e25cc4'
+         '49b799e923933a30cdefcac06f530fb0'
+         'a16981c0fef957a95999550f68cdb0f8')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
