Remove modprobe from rules Add md5sums
git-svn-id: file:///srv/repos/svn-packages/svn@10377 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/udev/trunk/PKGBUILD
+++ b/udev/trunk/PKGBUILD
@@ -3,13 +3,14 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 pkgname=udev
 pkgver=126
-pkgrel=1
+pkgrel=2
 pkgdesc="The userspace dev tools (udev)"
 arch=(i686 x86_64)
 url="http://www.kernel.org/pub/linux/utils/kernel/hotplug/udev.html"
 license=('GPL')
 groups=('base')
 depends=('glibc' 'coreutils' 'util-linux')
+makedepends=('kernel26') #needed to build framebuffer blacklist
 install=udev.install
 backup=(etc/udev/udev.conf
         etc/scsi_id.config
@@ -19,15 +20,17 @@ conflicts=('pcmcia-cs' 'hotplug')
 replaces=('devfsd')
 options=(!makeflags)
 source=(http://www.kernel.org/pub/linux/utils/kernel/hotplug/$pkgname-$pkgver.tar.bz2
-        migrate-udev
-        start_udev
-        51-arch.rules
-        load-modules.sh
-        #cdrom-rules.patch
-        cdsymlinks.sh
-        root-link.sh
-        readme-udev-arch.txt
-        arch-udev-rules.patch)
+        migrate-udev start_udev 51-arch.rules load-modules.sh
+        cdsymlinks.sh root-link.sh readme-udev-arch.txt arch-udev-rules.patch)
+md5sums=('502964d8623b81b6565c727dd28024de'
+         '49434a593918c822077bc3af765f1aff'
+         'a68a519d1ed8cbbd2f45c23eb32ea218'
+         '082e76ef9053495a5cade321817467cd'
+         '945f6d30ab458189b3c17f8e6722da1f'
+         '8424b78e9dd772e75b4ef90814807815'
+         '2d6dc6842464f107bccc68cd505a6c31'
+         '780db5316a762dc5cdcf52027ab8a8eb'
+         'c43a736b66edadadd9b91b8af1aa2d1c')
 
 build() {
   cd $startdir/src/$pkgname-$pkgver
