upgpkg: ncurses 5.6-8     Re-add libncurses.so.5 for binary compatibility All linking on Arch is still done the the wide character library
git-svn-id: file:///srv/repos/svn-packages/svn@10396 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/ncurses/trunk/PKGBUILD
+++ b/ncurses/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=ncurses
 pkgver=5.6
-pkgrel=7
+pkgrel=8
 pkgdesc="A System V Release 4.0 curses emulation library"
 arch=('i686' 'x86_64')
 url="http://www.gnu.org/software/ncurses/ncurses.html"
@@ -53,6 +53,15 @@ build() {
   ln -sf libncurses.so ${pkgdir}/usr/lib/libcurses.so
   ln -sf libncursesw.a ${pkgdir}/usr/lib/libcursesw.a
   ln -sf libncurses.a ${pkgdir}/usr/lib/libcurses.a
+
+  # Install libncurses.so.5 for external binary support 
+  ./configure --prefix=/usr \
+    --with-shared --with-normal --without-debug --without-ada \
+    --with-install-prefix=${pkgdir}
+  make || return 1
+  
+  install -Dm755 lib/libncurses.so.5.6 ${pkgdir}/usr/lib/libncurses.so.5.6
+  ln -sf libncurses.so.5.6 ${pkgdir}/usr/lib/libncurses.so.5
 
   # install license, rip it from the readme
   cd ${srcdir}/${pkgname}-${pkgver}
