upgpkg: kdeaccessibility 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10411 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeaccessibility/trunk/PKGBUILD
+++ b/kdeaccessibility/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeaccessibility
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Accessibility Aids"
 arch=('i686' 'x86_64')
@@ -10,10 +10,10 @@ url='http://www.kde.org'
 license=('GPL' 'FDL')
 groups=('kde')
 depends=('kdelibs')
-makedepends=('pkgconfig' 'cmake' 'automoc4')
+makedepends=('pkgconfig' 'cmake' 'automoc4' 'kdebase-runtime')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b923c4f54d1e6ea47c79f6fad536ce20')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('2e81aad070229a802630721cc6a4c44a')
 
 build() {
 	cd $srcdir
