upgpkg: kdeadmin 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10413 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeadmin/trunk/PKGBUILD
+++ b/kdeadmin/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeadmin
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Administration Programs"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdepimlibs')
+depends=('kdepimlibs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('e45c18ccb8a63f7ab1b0e7c47edbe8cb')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('e6693bcbe96bb9453e79bd3201d8f757')
 
 build() {
 	cd $srcdir
