upgpkg: kdeartwork 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10415 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeartwork/trunk/PKGBUILD
+++ b/kdeartwork/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeartwork
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE additional artwork"
 arch=('i686' 'x86_64')
@@ -11,8 +11,8 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
 depends=('kdebase-workspace' 'xscreensaver')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('a812886fb38f1d1267ae42dc2b0d98e9')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6e5ed770d7203f0c789512317d743e95')
 
 build() {
 	cd $srcdir
