upgpkg: kdebase 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10417 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebase/trunk/PKGBUILD
+++ b/kdebase/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Base Applications"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -13,8 +13,8 @@ depends=('libraw1394' 'kdebase-runtime')
 makedepends=('kdebase-workspace' 'pkgconfig' 'cmake' 'automoc4')
 optdepends=('kdebase-workspace')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('419bc56c2f39a123735a0fb472a3b644')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('33ab20f61aa33ed473fec710ad250ac7')
 
 build() {
 	cd $srcdir
