upgpkg: kdebase-workspace 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10421 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebase-workspace/trunk/PKGBUILD
+++ b/kdebase-workspace/trunk/PKGBUILD
@@ -1,39 +1,37 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebase-workspace
-pkgver=4.1.0
-pkgrel=5
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Base Workspace"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
 depends=('kdelibs' 'kdebase-runtime' 'libcaptury' 'libxxf86misc' 'libxcomposite' 'libxres'
-	 'libusb' 'libxss' 'lm_sensors' 'libxinerama' 'libxklavier' 'qimageblitz')
+	 'libxss' 'lm_sensors' 'libxinerama' 'libxklavier' 'qimageblitz')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'networkmanager' 'kdemultimedia')
 optdepends=('kdemultimedia')
 replaces=('kdmtheme' 'kde-common')
 conflicts=('kde-common')
 options=('docs')
 backup=('usr/share/config/kdm/kdmrc')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2"
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
         'kdm-zsh-profile.patch' 'kdm' 'kde.pam' 'kde-np.pam' 'kscreensaver.pam'
-        'agent-startup.sh' 'agent-shutdown.sh' 'systemtraywidget.patch')
-md5sums=('d8dbe16f5807536a429bbf9fd33e82a5'
+        'agent-startup.sh' 'agent-shutdown.sh')
+md5sums=('53805b96727db2fe30773a3fa9f78b73'
          '721e97031b62aee8914e8617e86f9235'
          '5d80164932e0d44d8b802d3929a004ab'
          '10a490653b002e6f9e7476ff9d37c011'
          '552337fd9a3982d809ea16c7f0033d42'
          '367a3538f54db71f108b34cfa31088ac'
          'c963ef6e37c9051119972a58c67f05fb'
-         '18e8d01124b19f7df2937c06e177bf7f'
-         '808a6efad838d15ba1cd81d8bf05820c')
+         '18e8d01124b19f7df2937c06e177bf7f')
 
 build() {
 	cd $srcdir/${pkgname}-${pkgver}
 	patch -p0 -i ${srcdir}/kdm-zsh-profile.patch || return 1
-	patch -p0 -i ${srcdir}/systemtraywidget.patch || return 1
 	cd ../
 	mkdir build
 	cd build
