upgpkg: kdebindings 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10423 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdebindings/trunk/PKGBUILD
+++ b/kdebindings/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdebindings
-pkgver=4.1.0
-pkgrel=3
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Language Bindings"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -11,8 +11,8 @@ license=('GPL' 'LGPL')
 depends=('kdepimlibs' 'python' 'ruby' 'qscintilla')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'sip' 'pyqt')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('b3b5e4c1adeba0c15f9d6efb5105033b')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('4b9d6b9b3980327ccef34a44180824df')
 
 build() {
 	cd $srcdir
