upgpkg: kdegames 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10427 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdegames/trunk/PKGBUILD
+++ b/kdegames/trunk/PKGBUILD
@@ -1,20 +1,20 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdegames
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Games"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdelibs' 'ggz-client-libs')
+depends=('kdelibs' 'ggz-client-libs' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
 install='kdegames.install'
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('86ae1765e40bfbbf0e2c0ff165fce6cd')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('2d32f53d36016107cbeae01ee5e103c5')
 
 build() {
 	cd $srcdir
