upgpkg: kdegraphics 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10429 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdegraphics/trunk/PKGBUILD
+++ b/kdegraphics/trunk/PKGBUILD
@@ -2,25 +2,21 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdegraphics
-pkgver=4.1.0
-pkgrel=4
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Graphics is a collection of graphic oriented applications:"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdelibs' 'poppler-qt' 'libspectre' 'exiv2' 'sane' 'chmlib' 'libdjvu' 'lcms' 'qca' 'qimageblitz' 'ebook-tools')
+depends=('kdelibs' 'kdebase-runtime' 'poppler-qt' 'libspectre' 'exiv2' 'sane' 'chmlib' 'libdjvu' 'lcms' 'qca' 'qimageblitz' 'ebook-tools')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 replaces=('gwenview' 'gwenview-i18n')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2"
-        fix-printing-in-okular.patch)
-md5sums=('3793b8b1ca0a326403b8f20ac40ef89d'
-         '9fb8e3b89effd33720d161e477bb0f59')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('e5475d37dc0a12b6ce7e6dbebceb9340')
 
 build() {
-	cd $srcdir/${pkgname}-${pkgver}
-	patch -Np4 -i ../fix-printing-in-okular.patch || return 1
 	cd $srcdir
 	mkdir build
 	cd build
