upgpkg: kdelibs 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10431 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdelibs/trunk/PKGBUILD
+++ b/kdelibs/trunk/PKGBUILD
@@ -1,9 +1,9 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdelibs
-pkgver=4.1.0
-pkgrel=4
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Core Libraries"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
@@ -11,23 +11,19 @@ license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
 depends=('libxcursor' 'phonon' 'shared-mime-info' 'qt>=4.4' 'libxpm'
 	 'enchant' 'jasper' 'openexr' 'strigi' 'bzip2' 'libxslt' 'libxtst'
-	 'giflib' 'soprano' 'ca-certificates' 'heimdal')
+	 'giflib' 'soprano' 'ca-certificates' 'heimdal' 'pmount')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'intltool' 'avahi' 'libgl')
 replaces=('arts')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2"
-        'kde-applications-menu.patch'
-        'refcount.patch')
-md5sums=('a72fd8653b86f73860d0e7ebf0f2d606'
-         '3daa0f01fe26325fb3dbd807a04898ad'
-         '754015620274dfce933d8691f8686f84')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2"
+        'kde-applications-menu.patch')
+md5sums=('fe3457ff49ed44a2084442a5950417be'
+         '3daa0f01fe26325fb3dbd807a04898ad')
 
 build() {
 	cd $srcdir/${pkgname}-${pkgver}
 	# avoid file conflict with gnome-menu
 	patch -p1 -i $srcdir/kde-applications-menu.patch || return 1
-	# fix closing of apps; see http://bugs.kde.org/show_bug.cgi?id=167826
-	patch -p1 -i $srcdir/refcount.patch || return 1
 	cd ..
 	mkdir build
 	cd build
