upgpkg: kdemultimedia 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10433 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdemultimedia/trunk/PKGBUILD
+++ b/kdemultimedia/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdemultimedia
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Multimedia Programs"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdelibs' 'xine-lib' 'tunepimp' 'cdparanoia')
+depends=('kdelibs' 'kdebase-runtime' 'xine-lib' 'tunepimp' 'cdparanoia')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('d822080344fb88776682fee021d878c6')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('efbf12cf33aafb13848fda258d001322')
 
 build() {
 	cd $srcdir
