upgpkg: kdepim 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10437 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepim/trunk/PKGBUILD
+++ b/kdepim/trunk/PKGBUILD
@@ -1,19 +1,19 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepim
-pkgver=4.1.0
-pkgrel=2
+pkgver=4.1.1
+pkgrel=1
 pkgdesc="KDE Personal Information Management suite"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdepimlibs' 'gnokii' 'libxss')
+depends=('kdepimlibs' 'gnokii' 'libxss' 'kdebase-runtime')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('79050bb31afb64fcd58d19357b7164ce')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('fdb80cc1bfa78047d2793e1d6c3fde41')
 
 build() {
 	cd $srcdir
