upgpkg: kdepimlibs 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10439 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdepimlibs/trunk/PKGBUILD
+++ b/kdepimlibs/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdepimlibs
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE PIM Libraries"
 arch=('i686' 'x86_64')
@@ -11,8 +11,8 @@ license=('GPL' 'LGPL')
 groups=('kde')
 depends=('kdelibs' 'akonadi' 'gpgme')
 makedepends=('pkgconfig' 'cmake' 'automoc4' 'boost' 'cyrus-sasl' 'openldap')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('df5bff97f9fb4e8b64a1c35c7e1724ef')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('36316f5fc5b2e0ec123a8e00a522dd80')
 
 build() {
 	cd $srcdir
