upgpkg: kdeplasma-addons 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10441 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdeplasma-addons/trunk/PKGBUILD
+++ b/kdeplasma-addons/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdeplasma-addons
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Plasma addons"
 arch=('i686' 'x86_64')
@@ -13,8 +13,8 @@ depends=('kdepimlibs' 'kdebase-workspace')
 replaces=('kdeaddons')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('418dfe9716db18287a3f6f53d9c81cf5')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('c36f023c799175927b260c78b9150810')
 
 build() {
 	cd $srcdir
