upgpkg: kdetoys 4.1.1-1     Update to KDE 4.1.1
git-svn-id: file:///srv/repos/svn-packages/svn@10445 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdetoys/trunk/PKGBUILD
+++ b/kdetoys/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id$
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kdetoys
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="KDE Toys"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ groups=('kde')
 depends=('kdebase-workspace')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('372c62581fb87145693674aedd4d9844')
+source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('6150f3daa22bce44f777579f2c13038b')
 
 build() {
 	cd $srcdir
